[project]
name = "pubmed-search"
version = "0.1.0"
description = ""
authors = [
    {name = "Pranitha Vangala",email = "pranithavangala1998@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "xmltodict (>=0.14.2,<0.15.0)"
]

[tool.poetry]
packages = [{include = "pubmed_search", from = "src"}]

[tool.poetry.scripts]
get-papers-list = "src.pubmed_search.cli:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
